feat : 지수 현재 과거 데이터 분리